# iqstocker-cursor

./: .flake8  .gitignore  ADMIN_FASTAPI_GUIDE.md  ADMIN_FIXES_REPORT.md  ADMIN_PANEL_COMPLETE.md  ADMIN_PANEL_ENHANCEMENT_COMPLETION_REPORT.md  ADMIN_PANEL_FINAL_FIXES_COMPLETE.md  ADMIN_PANEL_UPDATE_INSTRUCTIONS.md  ANALYTICS_FIXED.md  BROADCAST_EDIT_FEATURE.md  BROADCAST_FIX_INSTRUCTIONS.md  COMPLETE_FIX_SUMMARY.md  CSV_FIX_REPORT.md  DATABASE_SCHEMA_AUDIT_COMPLETE.md  DEPENDENCIES_INSTALLED.md  DEPLOYMENT_RAILWAY.md  DEVELOPMENT_GUIDE.md  Dockerfile  Dockerfile.alt  FINAL_ALL_ERRORS_FIXED_REPORT.md  FINAL_DEPLOYMENT_GUIDE.md  FINAL_ENCRYPTION_KEY_FIX.md  FINAL_ERROR_FIX_REPORT.md  FINAL_FIX_INSTRUCTIONS.md  FINAL_VIP_GROUP_FIX.md  FIXES_APPLIED_SUMMARY.md  FIX_ADMIN_PANEL_CACHE.md  GET_VIP_GROUP_ID.md  GITHUB_INTEGRATION_COMPLETE.md  LAUNCH_STATUS.md  LEXICON_DB_IMPLEMENTATION.md  LICENSE  LIMITS_ADMIN_IMPROVEMENTS.md  LINTER_ERRORS_FIXED.md  LLM_SERVICE_READY.md  LOGS_ANALYSIS_AND_FIXES.md  LOG_ANALYSIS_FIXES_COMPLETE.md  MIGRATION_FIX_COMPLETE.md  MVP_TESTING_GUIDE.md  Miro ТЗ.md  (+147 more)
.github/: pull_request_template.md
admin/: app.py
admin_panel/: auth.py  cache_utils.py  main.py  services.py
api/: admin_panel.py  healthcheck.py  webhook_server.py
bot/: main.py
config/: ai.py  database.py  settings.py
core/: theme_settings.py
database/: alembic.ini
docs/: ADMIN_PANEL_ENHANCED_GUIDE.md  ADMIN_PANEL_FIXES_COMPLETE.md  AI_FEATURES_GUIDE.md  ALL_FIXES_SUMMARY.md  ANALYTICS_METRICS_FIX_COMPLETE.md  APPLY_SYSTEM_SETTINGS_MIGRATION.md  CONTRIBUTING.md  README.md  (+25 more)
(+455 files in other folders)
